[package]
name = "centipede"
version = "0.2.12"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]

[lib]
crate-type = ["lib"]

[dependencies]
serde_derive = { version = "1.0", git = "https://github.com/mesalock-linux/serde-sgx" }
serde = { version = "1.0", git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
#rayon = "1.0.3"
curv = { git = "https://github.com/sgx-test/curv-sgx", version = "0.7", features = ["num-bigint"] }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dependencies.bulletproof]
git = "https://github.com/sgx-test/bulletproofs-sgx"
branch = "1.1.6-sgx"
#default-features = false

#[dev-dependencies]
#criterion = "0.2"

[features]
default = ["curv/num-bigint","mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]

[[bench]]
name = "v_backup"
path = "benches/v_backup.rs"
harness = false
