[package]
name = "centipede"
version = "0.2.12"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]

[lib]
crate-type = ["lib"]

[dependencies]
serde_derive = "1.0"
serde = "1.0"
rayon = "1.0.3"
curv = { git = "https://github.com/sgx-test/curv-sgx", branch = "0.7.0-sgx-struct", version = "0.7", default-features = false, features = ["num-bigint"] }

[dependencies.bulletproof]
git = "https://github.com/sgx-test/bulletproofs-sgx"
branch = "1.1.6-sgx-struct"
#tag = "v1.1.6"
default-features = false

[dev-dependencies]
criterion = "0.2"

[features]
default = ["curv/num-bigint"]

[[bench]]
name = "v_backup"
path = "benches/v_backup.rs"
harness = false
